fix: CB-751 value panel textarea flickering

--- a/webapp/packages/core-theming/src/styles/_form-controls.scss
+++ b/webapp/packages/core-theming/src/styles/_form-controls.scss
@@ -58,6 +58,7 @@
   input[role="new"],
   textarea[role="new"] {
     @include mdc-theme-prop(color, on-secondary, false);
+    @include mdc-theme-prop(border-color, background, false);
     @include mdc-theme-prop(background-color, input-background, false);
     box-sizing: border-box;
     padding: 7px 11px;
@@ -66,7 +67,6 @@
     border: 2px solid;
     outline: none;
     border-radius: 3px;
-    @include mdc-theme-prop(border-color, background, false);
     &:focus {
       @include mdc-theme-prop(border-color, primary, false);
     }
@@ -85,6 +85,10 @@
       @include mdc-theme-prop(border-color, input-border-disabled, false);
       @include mdc-theme-prop(background-color, input-background-disabled, false);
       opacity: 0.7;
+    }
+    &:global([data-embedded]) {
+      @include mdc-theme-prop(border-color, background, false);
+      @include mdc-theme-prop(background-color, input-background, false);
     }
   }
 
